# aps_rss_ai_everyday

./: .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: run.yml
ai/: enhance.py  system.txt
daily_arxiv/daily_arxiv/: check_stats.py  fetch_aps.py
daily_arxiv/daily_arxiv/spiders/: arxiv.py
data/: 2026-04-11.jsonl  2026-04-11.md  2026-04-11_AI_enhanced_Chinese.jsonl  2026-04-12.jsonl  2026-04-12.md  2026-04-12_AI_enhanced_Chinese.jsonl  2026-04-14.jsonl  2026-04-14.md  2026-04-14_AI_enhanced_Chinese.jsonl  2026-04-15.jsonl  2026-04-15.md  2026-04-15_AI_enhanced_Chinese.jsonl  2026-04-16.jsonl  2026-04-16.md  2026-04-16_AI_enhanced_Chinese.jsonl  2026-04-17.jsonl  2026-04-17.md  2026-04-17_AI_enhanced_Chinese.jsonl  2026-04-18.jsonl  2026-04-18.md  2026-04-18_AI_enhanced_Chinese.jsonl  2026-04-19.jsonl  2026-04-19.md  2026-04-19_AI_enhanced_Chinese.jsonl  2026-04-20.jsonl  2026-04-20.md  2026-04-20_AI_enhanced_Chinese.jsonl  2026-04-21.jsonl  2026-04-21.md  2026-04-21_AI_enhanced_Chinese.jsonl  2026-04-22.jsonl  2026-04-22.md  2026-04-22_AI_enhanced_Chinese.jsonl  2026-04-23.jsonl  2026-04-23.md  2026-04-23_AI_enhanced_Chinese.jsonl  2026-04-24.jsonl  2026-04-24.md  2026-04-24_AI_enhanced_Chinese.jsonl  2026-04-25.jsonl  (+267 more)
examples/aps-rss-smoke-2026-04-12/: README.md  output.md  raw.jsonl
examples/arxiv-smoke-2026-04-12/: README.md  ai_enhanced_Chinese.jsonl  output.md  raw.jsonl
to_md/: convert.py
