[project]
name = "daily-arxiv"
version = "0.1.0"
description = "Backend pipeline for fetching papers, enriching them with LLMs, and exporting markdown"
authors = [
    {name = "Wei Deng", email = "huangpipip@outlook.com"},
    {name = "Jian Guan", email = "jianguanthu@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "dotenv>=0.9.9",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.9",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "scrapy>=2.12.0",
    "tqdm>=4.67.1",
]
license = "Apache-2.0"
